--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "connect-flash": "^0.1.1",
     "connect-mongodb-session": "^5.0.0",
     "cookie-parser": "^1.4.6",
+    "csurf": "^1.11.0",
     "dotenv": "^16.4.5",
     "ejs": "^3.1.10",
     "express": "^4.21.0",
@@ -23,6 +24,7 @@
     "express-session": "^1.18.0",
     "helmet": "^7.1.0",
     "host-csrf": "^1.0.2",
+    "http-status-codes": "^2.3.0",
     "mongoose": "^8.6.2",
     "passport": "^0.7.0",
     "passport-local": "^1.0.0",
