--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "start": "node app.js",
     "dev": "nodemon app.js",
-    "test": "mocha test/*.js --timeout 5000 --exit"
+    "test": "mocha tests/*.js --timeout 5000 --exit"
   },
   "author": "",
   "license": "ISC",
@@ -26,6 +26,7 @@
     "host-csrf": "^1.0.2",
     "http-status-codes": "^2.3.0",
     "mongoose": "^8.6.2",
+    "node-fetch": "^2.7.0",
     "passport": "^0.7.0",
     "passport-local": "^1.0.0",
     "xss-clean": "^0.1.4"
